2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Restored the GtkHandleBox::child-attached 
	signal definition and the GtkLinkButton::visited property definition, 
	so these are really put in the API. At some point in 2.14.x we lost 
	these.

2008-11-09  Alexander Shaduri  <ashaduri@gmail.com>

	* gtk/src/cellview.ccg:
	* gtk/src/cellview.hg: Added unset_model().

	* gtk/src/combobox.ccg:
	* gtk/src/combobox.hg: Added unset_model().

	* gtk/src/entrycompletion.ccg:
	* gtk/src/entrycompletion.hg: Added unset_model().

	* gtk/src/iconview.ccg:
	* gtk/src/iconview.hg: Added unset_model().

	* gtk/src/treeview.hg: Marked unset_model() as available since 2.8.

	* gtk/src/gtk_docs_override.xml: Added overrides for
	gtk_tree_view_set_model(), gtk_cell_view_set_model(),
	gtk_entry_completion_set_model(), gtk_entry_completion_set_model()
	and gtk_combo_box_set_model(), because their documentation
	contained an incorrect method of unsetting the models.
	Bug #555268

This is trunk for API additions. See also the gtkmm-2-14 branch.

2.14.2:

2008-11-10  Deng Xiyue  <manphiz@gmail.com>
 
	* docs/reference/doxygen_to_devhelp.xsl: Use reference index.html
	as start page. Bug #559900.

2008-11-10  Murray Cumming  <murrayc@murrayc.com>

	* win32_installer/Makefile.am: Updated this for the changed filenames, 
	to fix the dist.

2008-10-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerated.
	* gtk/src/gtk_docs_override.xml: Added an override for 
	gtk_tree_view_set_tooltip_row() because gmmproc did not rename one 
	of the functions mentioned.
	This adds documentation for the set_tooltip_*() methods.
	Bug #547787 (John Hobbs)

2008-10-12  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/install-msvc-module: Allow Specifing toolset to
	install the DLLs for.

	* win32_installer/build-installer: Updated to add MSVC 2008 DLLs
	to the installer.

	* win32_installer/gtkmm-installer.nsi.in: Added MSVC 2008 files, fixed