@@ -371,7 +371,6 @@ if test "x$enable_docs" = "xyes"; then
   DOCS_SUBDIR="docs"
   AC_CONFIG_FILES([
     docs/Makefile
-      docs/FAQ/Makefile
       docs/images/Makefile
       docs/reference/Makefile
       docs/reference/Doxyfile
