@@ -1,3 +1,11 @@
+2008-11-18  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in:
+	* docs/FAQ/Makefile.am:
+	* docs/FAQ/gtkmm-faq.xml:
+	* docs/Makefile.am: Remove the FAQ because we moved it to 
+	gtkmm-documentation months ago.
+
 2008-11-14  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_signals.defs: Restored the GtkHandleBox::child-attached 
